fix: Fixed text overflowing problem (for small screen sizes)

--- a/src/index.css
+++ b/src/index.css
@@ -317,6 +317,7 @@ legend {
   align-items: start;
   padding-left: 10px;
   padding-right: 10px;
+  overflow: hidden;
 }
 
 /* .content occupies the center of the screen.*/
@@ -325,6 +326,10 @@ legend {
   grid-column: 2;
   column-gap: 20px;
   row-gap: 20px;
+}
+
+.content * {
+  overflow-wrap: anywhere;
 }
 
 /* Header */
